--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <meta property="og:title" content="AI Freight OS - Logistics Automation Platform" />
     <meta property="og:description" content="Transform your logistics operations with AI-driven automation" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/world-wireframe.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="twitter:image" content="/world-wireframe.png" />
   </head>
 
   <body>
