Add premium design enhancements: animations, glows, gradients, and effects

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AI Freight OS - Next-Generation Logistics Automation Platform</title>
-    <meta name="description" content="AI-powered logistics control suite featuring quote generation, load matching, document automation, demand forecasting, and advanced analytics" />
-    <meta name="author" content="AI Freight OS" />
+    <title>STRUCTURE Demo - AI Infrastructure for Complex Logistics</title>
+    <meta name="description" content="AI-powered logistics infrastructure featuring quote generation, load matching, document automation, demand forecasting, and advanced analytics" />
+    <meta name="author" content="Structure" />
 
-    <meta property="og:title" content="AI Freight OS - Logistics Automation Platform" />
+    <meta property="og:title" content="STRUCTURE Demo - AI Infrastructure for Complex Logistics" />
     <meta property="og:description" content="Transform your logistics operations with AI-driven automation" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/world-wireframe.png" />
@@ -15,6 +15,10 @@
     <meta name="twitter:card" content="summary_large_image" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="twitter:image" content="/world-wireframe.png" />
+    
+    <!-- Preload fonts for smooth rendering -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   </head>
 
   <body>
